tests/negative/non_field.def
// Negative unit test trying to access a non-field from a struct.

typedef foo = { bar i32 };

def baz (f foo) -> i32
begin
    return f.quux;
end
